--- a/index.html
+++ b/index.html
@@ -44,11 +44,19 @@
         </nav>
         <ul class="contacts list">
           <li>
-            <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="header-mail link" href="mailto:info@devstudio.com"
+              ><svg class="contact-icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-mail"></use></svg
+              >info@devstudio.com
+            </a>
           </li>
 
           <li>
-            <a class="header-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="header-phone link" href="tel:+380961111111">
+              <svg class="contact-icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-telephone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -68,24 +76,36 @@
         <div class="container">
           <ul class="about-list list">
             <li class="about-item">
+              <svg class="about-icon" width="70" height="70">
+                <use href="./images/icons.svg#icon-antena"></use>
+              </svg>
               <h3>Внимание к деталям</h3>
               <p>
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="about-item">
+              <svg class="about-icon" width="70" height="70">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
               <h3>Пунктуальность</h3>
               <p>
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="about-item">
+              <svg class="about-icon" width="70" height="70">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
               <h3>Планирование</h3>
               <p>
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="about-item">
+              <svg class="about-icon" width="70" height="70">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
               <h3>Современные технологии</h3>
               <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
@@ -124,6 +144,60 @@
               <div class="team-item-wrapper">
                 <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
+                <ul class="socials list">
+                  <li class="socials-item">
+                    <a
+                      href=""
+                      class="socials-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="instagram"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      href=""
+                      class="socials-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="twitter"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      href=""
+                      class="socials-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="facebook"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      href=""
+                      class="socials-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="linkedin"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item card-set-item">
@@ -135,8 +209,62 @@
                 height="260"
               />
               <div class="team-item-wrapper">
-                <h3>Ольга Репина</h3>
-                <p>Frontend Developer</p>
+                <h3>Игорь Демьяненко</h3>
+                <p>Product Designer</p>
+                <ul class="socials list">
+                  <li class="socials-item">
+                    <a
+                      href=""
+                      class="socials-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="instagram"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      href=""
+                      class="socials-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="twitter"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      href=""
+                      class="socials-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="facebook"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      href=""
+                      class="socials-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="linkedin"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -148,16 +276,161 @@
                 height="260"
               />
               <div class="team-item-wrapper">
-                <h3>Николай Тарасов</h3>
-                <p>Marketing</p>
+                <h3>Игорь Демьяненко</h3>
+                <p>Product Designer</p>
+                <ul class="socials list">
+                  <li class="socials-item">
+                    <a
+                      href=""
+                      class="socials-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="instagram"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      href=""
+                      class="socials-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="twitter"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      href=""
+                      class="socials-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="facebook"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      href=""
+                      class="socials-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="linkedin"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item card-set-item">
               <img src="images/team/ui_designer.jpg" alt="ui_designer" width="270" height="260" />
               <div class="team-item-wrapper">
-                <h3>Михаил Ермаков</h3>
-                <p>UI Designer</p>
+                <h3>Игорь Демьяненко</h3>
+                <p>Product Designer</p>
+                <ul class="socials list">
+                  <li class="socials-item">
+                    <a
+                      href=""
+                      class="socials-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="instagram"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      href=""
+                      class="socials-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="twitter"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      href=""
+                      class="socials-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="facebook"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-item">
+                    <a
+                      href=""
+                      class="socials-link link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="linkedin"
+                    >
+                      <svg class="socials-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="clients">
+        <div class="container clients-container">
+          <h2 class="clients-title">Постоянные клиенты</h2>
+          <ul class="clients-list">
+            <li class="clients-item">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-logo-1"></use>
+              </svg>
+            </li>
+            <li class="clients-item">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-logo-2"></use>
+              </svg>
+            </li>
+            <li class="clients-item">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-logo-3"></use>
+              </svg>
+            </li>
+            <li class="clients-item">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-logo-4"></use>
+              </svg>
+            </li>
+            <li class="clients-item">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-logo-5"></use>
+              </svg>
+            </li>
+            <li class="clients-item">
+              <svg class="client-icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-logo-6"></use>
+              </svg>
             </li>
           </ul>
         </div>
@@ -166,28 +439,87 @@
     <!-- footer section -->
     <footer class="footer">
       <div class="container footer-container">
-        <a class="footer-logo-link link" href="#" lang="en"
-          ><span class="footer-logo-accent">Web</span>Studio</a
-        >
-        <address>
-          <ul class="footer-list list">
+        <div class="footer-left">
+          <a class="footer-logo-link link" href="#" lang="en"
+            ><span class="footer-logo-accent">Web</span>Studio</a
+          >
+          <address>
+            <ul class="footer-list list">
+              <li class="footer-item">
+                <a
+                  class="footer-link link"
+                  href="https://bit.ly/3pXMvUd"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-mail link" href="mailto:info@devstudio.com">info@example.com</a>
+              </li>
+              <li class="footer-item">
+                <a class="footer-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-right">
+          <h2 class="footer-title">Присоединяйтесь</h2>
+          <ul class="footer-right-list list">
             <li class="footer-item">
               <a
-                class="footer-link link"
-                href="https://bit.ly/3pXMvUd"
+                class="socials-footer-link link"
+                href=""
                 target="_blank"
                 rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
+                aria-label="instagram"
               >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-item">
-              <a class="footer-mail link" href="mailto:info@devstudio.com">info@example.com</a>
+              <a
+                class="socials-footer-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="twitter"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-item">
-              <a class="footer-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+              <a
+                class="socials-footer-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="facebook"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a
+                class="socials-footer-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="linkedin"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
