--- a/portfolio.html
+++ b/portfolio.html
@@ -44,11 +44,20 @@
         </nav>
         <ul class="contacts list">
           <li>
-            <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="header-mail link" href="mailto:info@devstudio.com"
+              ><svg class="contact-icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-mail"></use></svg
+              >info@devstudio.com
+            </a>
           </li>
 
           <li>
-            <a class="header-phone link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <a class="header-phone link" href="tel:+380961111111">
+              <svg class="contact-icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-telephone"></use></svg
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </div>
     </header>
@@ -184,28 +193,87 @@
     <!-- footer section -->
     <footer class="footer">
       <div class="container footer-container">
-        <a class="footer-logo-link link" href="#" lang="en"
-          ><span class="footer-logo-accent">Web</span>Studio</a
-        >
-        <address>
-          <ul class="footer-list list">
+        <div class="footer-left">
+          <a class="footer-logo-link link" href="#" lang="en"
+            ><span class="footer-logo-accent">Web</span>Studio</a
+          >
+          <address>
+            <ul class="footer-list list">
+              <li class="footer-item">
+                <a
+                  class="footer-link link"
+                  href="https://bit.ly/3pXMvUd"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-mail link" href="mailto:info@devstudio.com">info@example.com</a>
+              </li>
+              <li class="footer-item">
+                <a class="footer-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-right">
+          <h2 class="footer-title">Присоединяйтесь</h2>
+          <ul class="footer-right-list list">
             <li class="footer-item">
               <a
-                class="footer-link link"
-                href="https://bit.ly/3pXMvUd"
+                class="socials-footer-link link"
+                href=""
                 target="_blank"
                 rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
+                aria-label="instagram"
               >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-item">
-              <a class="footer-mail link" href="mailto:info@devstudio.com">info@example.com</a>
+              <a
+                class="socials-footer-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="twitter"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="footer-item">
-              <a class="footer-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+              <a
+                class="socials-footer-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="facebook"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a
+                class="socials-footer-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="linkedin"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
