fixed some styles in style.css

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li>
             <a class="header-phone link" href="tel:+380961111111">
               <svg class="contact-icon" width="10" height="16">
-                <use href="./images/icons.svg#icon-telephone"></use></svg
+                <use href="./images/icons.svg#icon-phone"></use></svg
               >+38 096 111 11 11</a
             >
           </li>
@@ -76,36 +76,44 @@
         <div class="container">
           <ul class="about-list list">
             <li class="about-item">
-              <svg class="about-icon" width="70" height="70">
-                <use href="./images/icons.svg#icon-antena"></use>
-              </svg>
+              <div class="background">
+                <svg class="about-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3>Внимание к деталям</h3>
               <p>
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="about-item">
-              <svg class="about-icon" width="70" height="70">
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
+              <div class="background">
+                <svg class="about-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3>Пунктуальность</h3>
               <p>
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="about-item">
-              <svg class="about-icon" width="70" height="70">
-                <use href="./images/icons.svg#icon-diagram"></use>
-              </svg>
+              <div class="background">
+                <svg class="about-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3>Планирование</h3>
               <p>
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="about-item">
-              <svg class="about-icon" width="70" height="70">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
+              <div class="background">
+                <svg class="about-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3>Современные технологии</h3>
               <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
@@ -209,8 +217,8 @@
                 height="260"
               />
               <div class="team-item-wrapper">
-                <h3>Игорь Демьяненко</h3>
-                <p>Product Designer</p>
+                <h3>Ольга Репина</h3>
+                <p>Frontend Developer</p>
                 <ul class="socials list">
                   <li class="socials-item">
                     <a
@@ -276,8 +284,8 @@
                 height="260"
               />
               <div class="team-item-wrapper">
-                <h3>Игорь Демьяненко</h3>
-                <p>Product Designer</p>
+                <h3>Николай Тарасов</h3>
+                <p>Marketing</p>
                 <ul class="socials list">
                   <li class="socials-item">
                     <a
@@ -337,8 +345,8 @@
             <li class="team-item card-set-item">
               <img src="images/team/ui_designer.jpg" alt="ui_designer" width="270" height="260" />
               <div class="team-item-wrapper">
-                <h3>Игорь Демьяненко</h3>
-                <p>Product Designer</p>
+                <h3>Михаил Ермаков</h3>
+                <p>UI Designer</p>
                 <ul class="socials list">
                   <li class="socials-item">
                     <a
@@ -401,36 +409,84 @@
       <section class="clients">
         <div class="container clients-container">
           <h2 class="clients-title">Постоянные клиенты</h2>
-          <ul class="clients-list">
+          <ul class="clients-list list">
             <li class="clients-item">
-              <svg class="client-icon" width="106" height="60">
-                <use href="./images/icons.svg#icon-logo-1"></use>
-              </svg>
+              <a
+                href=""
+                class="client-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="logo-1"
+              >
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-logo-1"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-item">
-              <svg class="client-icon" width="106" height="60">
-                <use href="./images/icons.svg#icon-logo-2"></use>
-              </svg>
+              <a
+                href=""
+                class="client-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="logo-2"
+              >
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-logo-2"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-item">
-              <svg class="client-icon" width="106" height="60">
-                <use href="./images/icons.svg#icon-logo-3"></use>
-              </svg>
+              <a
+                href=""
+                class="client-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="logo-3"
+              >
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-logo-3"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-item">
-              <svg class="client-icon" width="106" height="60">
-                <use href="./images/icons.svg#icon-logo-4"></use>
-              </svg>
+              <a
+                href=""
+                class="client-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="logo-4"
+              >
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-logo-4"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-item">
-              <svg class="client-icon" width="106" height="60">
-                <use href="./images/icons.svg#icon-logo-5"></use>
-              </svg>
+              <a
+                href=""
+                class="client-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="logo-5"
+              >
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-logo-5"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-item">
-              <svg class="client-icon" width="106" height="60">
-                <use href="./images/icons.svg#icon-logo-6"></use>
-              </svg>
+              <a
+                href=""
+                class="client-link link"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="logo-6"
+              >
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-logo-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
