--- a/portfolio.html
+++ b/portfolio.html
@@ -44,8 +44,8 @@
         </nav>
         <ul class="contacts list">
           <li>
-            <a class="header-mail link" href="mailto:info@devstudio.com"
-              ><svg class="contact-icon" width="16" height="12">
+            <a class="header-mail link" href="mailto:info@devstudio.com">
+              <svg class="contact-icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-mail"></use></svg
               >info@devstudio.com
             </a>
@@ -55,8 +55,8 @@
             <a class="header-phone link" href="tel:+380961111111">
               <svg class="contact-icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-telephone"></use></svg
-              >+38 096 111 11 11</a
-            >
+              >+38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
