--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
           </ul>
           <ul class="work-card list card-set">
             <li class="work-cards card-set-item">
-              <a href="#">
+              <a class="work-link link"  href="#">
                 <img
                   src="images/portfolio/laptop.jpg"
                   alt="technochryak"
@@ -131,7 +131,7 @@
                 <p class="work-cards-text">Маркетинг</p>
               </div>
             </li>
-            <li class="work-cards">
+            <li class="work-cards card-set-item">
               <a href="#">
                 <img src="images/portfolio/boxes.jpg" alt="boxes" width="370" height="294" />
               </a>
@@ -163,7 +163,7 @@
                 <p class="work-cards-text">Дизайн</p>
               </div>
             </li>
-            <li class="work-cards">
+            <li class="work-cards card-set-item">
               <a href="#">
                 <img src="images/portfolio/lab.jpg" alt="lab" width="370" height="294" />
               </a>
